--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,7 @@ default: &default
 development:
   <<: *default
   host:  <%= ENV.fetch('APPLICATION_HOST', 'localhost') %>
-  database: <%= ENV.fetch('AACT_BACK_DATABASE_NAME', 'aact_back') %>
+  database: <%= ENV.fetch('AACT_BACK_DATABASE_NAME', 'aact') %>
 
 test:
   <<: *default
@@ -20,7 +20,7 @@ test:
 production:
   <<: *default
   host:  <%= ENV.fetch('APPLICATION_HOST', 'localhost') %>
-  database: <%= ENV.fetch('AACT_BACK_DATABASE_NAME', 'aact_back') %>
+  database: <%= ENV.fetch('AACT_BACK_DATABASE_NAME', 'aact') %>
 
 public:
   <<: *default
